force-app/main/default/objects/DOM_CaseExtension__c/DOM_CaseExtension__c.object-meta.xml
<CustomObject>
    <label>Case Extension</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Case Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases Extension</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>