force-app/main/default/objects/DOM_CaseExtension__c/fields/DOC_analysedOK__c.field-meta.xml
<CustomField>
    <fullName>DOC_analysedOK__c</fullName>
    <label>Documents Analysed OK</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>