force-app/main/default/objects/DOM_CaseExtension__c/fields/DOC_toAnalyse__c.field-meta.xml
<CustomField>
    <fullName>DOC_toAnalyse__c</fullName>
    <label>Documents to Analyse</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>