force-app/main/default/objects/DOM_CaseExtension__c/fields/DOM_caseId__c.field-meta.xml
<CustomField>
    <fullName>DOM_caseId__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases Extension</relationshipLabel>
    <relationshipName>Cases_Extension2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>