force-app/main/default/objects/DOM_CaseExtension__c/fields/DOM_Status__c.field-meta.xml
<CustomField>
    <fullName>DOM_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Lang</fullName>
            </value>
            <value>
                <fullName>DRV</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>