force-app/main/default/objects/DOM_CaseExtension__c/fields/DRV_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>DRV_Accuracy__c</fullName>
    <label>Derivation Accuracy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>