force-app/main/default/objects/DOM_CaseExtension__c/fields/DRV_derivatedTo__c.field-meta.xml
<CustomField>
    <fullName>DRV_derivatedTo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Derivated To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>