force-app/main/default/objects/DOM_CaseExtension__c/fields/DRV_isDerivated__c.field-meta.xml
<CustomField>
    <fullName>DRV_isDerivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Derivated</label>
    <type>Checkbox</type>
</CustomField>