force-app/main/default/objects/DOM_CaseExtension__c/fields/DRV_Reason__c.field-meta.xml
<CustomField>
    <fullName>DRV_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Derivation Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>