force-app/main/default/objects/DOM_CaseExtension__c/fields/ENT_claimant1__c.field-meta.xml
<CustomField>
    <fullName>ENT_claimant1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claimant 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>