force-app/main/default/objects/DOM_CaseExtension__c/fields/ENT_claimant2Reason__c.field-meta.xml
<CustomField>
    <fullName>ENT_claimant2Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claimant 2 Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>