force-app/main/default/objects/DOM_CaseExtension__c/fields/ENT_firm__c.field-meta.xml
<CustomField>
    <fullName>ENT_firm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Firm</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>