force-app/main/default/objects/DOM_CaseExtension__c/fields/ENT_firmReason__c.field-meta.xml
<CustomField>
    <fullName>ENT_firmReason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Firm Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>