force-app/main/default/objects/DOM_CaseExtension__c/fields/ENT_othersReason__c.field-meta.xml
<CustomField>
    <fullName>ENT_othersReason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Others Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>