force-app/main/default/objects/DOM_CaseExtension__c/fields/EVAL_responseTo__c.field-meta.xml
<CustomField>
    <fullName>EVAL_responseTo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>