force-app/main/default/objects/DOM_CaseExtension__c/fields/LANG_accuracy__c.field-meta.xml
<CustomField>
    <fullName>LANG_accuracy__c</fullName>
    <label>Language Accuracy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>