force-app/main/default/objects/DOM_CaseExtension__c/fields/LANG_lang__c.field-meta.xml
<CustomField>
    <fullName>LANG_lang__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ES</fullName>
                <default>true</default>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>EN</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Polish</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>PT</fullName>
                <label>Portuguese</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Catalan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>