force-app/main/default/objects/DOM_CaseExtension__c/fields/LANG_reason__c.field-meta.xml
<CustomField>
    <fullName>LANG_reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Language Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>