force-app/main/default/objects/DOM_CaseExtension__c/fields/SPAM_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>SPAM_Accuracy__c</fullName>
    <label>Spam Accuracy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>