force-app/main/default/objects/DOM_CaseExtension__c/fields/SPAM_isSpam__c.field-meta.xml
<CustomField>
    <fullName>SPAM_isSpam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is spam</label>
    <type>Checkbox</type>
</CustomField>