force-app/main/default/objects/DOM_CaseExtension__c/fields/SPAM_Reason__c.field-meta.xml
<CustomField>
    <fullName>SPAM_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Spam Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>